# slx2text

./: .gitmodules  CMakeLists.txt  std-streamoff.patch
cmake/: ZipLibTarget.cmake
source/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.hpp  DumpAllFiles.cpp  SlxUtils.cpp  SlxUtils.hpp  ZipFileIterator.cpp  ZipFileIterator.hpp  ZipUtils.cpp  ZipUtils.hpp  main.cpp  playground.cpp
